--- a/IMS/IMS/Views/Shared/_Layout.cshtml
+++ b/IMS/IMS/Views/Shared/_Layout.cshtml
@@ -21,11 +21,12 @@
                     <br />
                     </div>
                     <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                        <ul class="nav navbar-nav">                            
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                            <li>@Html.ActionLink("Requisitions", "Index", "Requisitions")</li>
                         </ul>
                         @Html.Partial("_LoginPartial")
                     </div>
