--- a/IMS/IMS/Views/Shared/_Layout.cshtml
+++ b/IMS/IMS/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                             <li>@Html.ActionLink("Products", "Index", "Products")</li>
                             <li>@Html.ActionLink("Requisitions", "Index", "Requisitions")</li>
+
+                            <li>@Html.ActionLink("Drivers", "Index", "Drivers")</li>
+                            <li>@Html.ActionLink("Vehicles", "Index", "Vehicles")</li>
+                            <li>@Html.ActionLink("Suppliers", "Index", "Suppliers")</li>
                         </ul>
                         @Html.Partial("_LoginPartial")
                     </div>
