Adding Purchase Order...

--- a/IMS/IMS/Views/Shared/_Layout.cshtml
+++ b/IMS/IMS/Views/Shared/_Layout.cshtml
@@ -22,11 +22,12 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">                            
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                             <li>@Html.ActionLink("Products", "Index", "Products")</li>
                             <li>@Html.ActionLink("Requisitions", "Index", "Requisitions")</li>
+                            <li>@Html.ActionLink("Purchase Orders", "Index", "PurchaseOrders")</li>
 
                             <li>@Html.ActionLink("Drivers", "Index", "Drivers")</li>
                             <li>@Html.ActionLink("Vehicles", "Index", "Vehicles")</li>
