--- a/IMS/IMS/Views/Products/Delete.cshtml
+++ b/IMS/IMS/Views/Products/Delete.cshtml
@@ -1,19 +1,18 @@
 ﻿@model IMS.Product
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete Product</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.Label("Name")
         </dt>
 
         <dd>
@@ -21,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProductCode)
+            @Html.Label("Code")
         </dt>
 
         <dd>
@@ -29,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProductCategory.ProductCategoryName)
+            @Html.Label("Category")
         </dt>
 
         <dd>
@@ -37,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Unit.UnitTitle)
+            @Html.Label("Unit")
         </dt>
 
         <dd>
