--- a/IMS/IMS/Views/Products/Details.cshtml
+++ b/IMS/IMS/Views/Products/Details.cshtml
@@ -1,18 +1,17 @@
 ﻿@model IMS.Product
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Product Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Product Details</h2>
 
 <div>
-    <h4>Product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.Label("Name")
         </dt>
 
         <dd>
@@ -20,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProductCode)
+            @Html.Label("Code")
         </dt>
 
         <dd>
@@ -28,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ProductCategory.ProductCategoryName)
+            @Html.Label("Category")
         </dt>
 
         <dd>
@@ -36,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Unit.UnitTitle)
+            @Html.Label("Unit")
         </dt>
 
         <dd>
