--- a/IMS/IMS/Views/Products/Index.cshtml
+++ b/IMS/IMS/Views/Products/Index.cshtml
@@ -1,52 +1,54 @@
 ﻿@model IEnumerable<IMS.Product>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Products";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Products</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ProductName)
+            @Html.Label("Name")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ProductCode)
+            @Html.Label("Code")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ProductCategory.ProductCategoryName)
+            @Html.Label("Category")
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Unit.UnitTitle)
+        <th>            
+            @Html.Label("Unit")
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProductCategory.ProductCategoryName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Unit.UnitTitle)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProductId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProductId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProductId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductCategory.ProductCategoryName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Unit.UnitTitle)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ProductId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
+            </td>
+        </tr>
+    }
 
 </table>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
